# text_analyzer

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
samples/: PythonTutorial.txt  poetry.md
tests/: test_file_handler.py  test_plotter.py  test_text_analyzer.py
text_analyzer/: config.py  file_handler.py  plotter.py  text_analyzer.py
